--- a/styles/main.css
+++ b/styles/main.css
@@ -68,13 +68,40 @@ header .logo{
 	z-index: 1;
 }
 
+
 #primary {
-	width:  803px;
+	/*width:  803px;*/
+	width: 100%;
+	height: 28px;
+	background-color: #cc2030;
+	padding-top: 14px;
 	margin: auto;
 	margin-bottom: 20px;
 	font: bold 13px Verdana, sans-serif;
 	text-transform:  uppercase;
 	letter-spacing: 1px;
+	z-index: 5;
+	
+}
+/*
+#primary {
+	width:  100%;
+	height:  28px;
+	background-color: #fafaf6;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	padding-top:  14px;
+	font: bold 13px "DroidSansBold", Verdana, sans-serif;
+	-moz-box-shadow:  0px 1px 2px #ccc;
+	-webkit-box-shadow:  0px 1px 2px #ccc;
+	box-shadow:  0px 1px 2px #ccc;
+	text-transform:  uppercase;
+	letter-spacing: 1px;
+}*/
+
+#primary ul{
+	width: 803px;
+	margin: auto;
 }
 
 #primary ul li {
@@ -116,7 +143,7 @@ border: 1px #616363 solid;
 border-bottom: none;
 color: #616363;
 margin: auto;
-font: normal .9em 'Courier';
+font: normal 13px 'Courier';
 position: relative;
 padding: 10px;
 width: 70%;
@@ -144,7 +171,8 @@ position: absolute;
 top: 0;
 right: 30px;
 width: 21px;
-height: 147px;
+/*height: 147px;*/
+height: 100%;
 }
 
 .announcement{
