--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,17 @@ body{
 	margin: 0;
 }
 
+.header-bg-small{
+	background: #cc2030;
+	position: fixed;
+	top: 0; left: 0;
+	width: 100%;
+	height: 42px;
+	z-index: -1;
+	display: block;
+	margin: 0;
+}
+
 .container{
 	border: 1px #252525 solid;
 	padding: 0 25px;
@@ -70,8 +81,8 @@ header .logo{
 
 
 #primary {
-	/*width:  803px;*/
-	width: 100%;
+	width:  950px;
+	/*width: 100%;*/
 	height: 28px;
 	background-color: #cc2030;
 	padding-top: 14px;
