--- a/styles/main.css
+++ b/styles/main.css
@@ -96,7 +96,7 @@ header .logo{
 }
 
 #primary ul{
-	width: 850px;
+	width: 810px;
 	margin: auto;
 }
 
@@ -294,6 +294,8 @@ height: 100%;
 
 #freedom{
 	position: relative;
+	top: 15px;
+	left: 8px;
 }
 
 #freedom img {
@@ -501,7 +503,7 @@ footer p{
 	float: left;
 }
 
-.history {
+.history, #freedom_songs {
 border: 1px #616363 solid;
 color: #616363;
 margin: auto;
@@ -519,40 +521,85 @@ top: 20px;
 	background: #F2F3F4;
 }
 
-.history h1{
+.history h1, #freedom_songs h1{
 	padding-top: 15px;
 	text-align: center;
 	font-family: Verdana, helvetica, sans-serif;
 	color: #cc2030;
 }
 
-.history p{
+.history p, #freedom_songs p{
 	margin: 0;
 	overflow: hidden;
 	padding: 15px 60px 15px 60px;
 	text-align: justify;
+	font: normal 13px 'Courier';
 }
+
 
 #space{
 	height: 50px;
 	width: 100%;
 }
 
-#freedom_songs{
-	width: 640px;
-	background: #F2F3F4;
-	display: inline-block;
-	position: relative;
-	margin: auto;
+/* VIDEOS */
+#video_container{
+	width:  1050px;
+	position:  relative;
+	left:  -50px;
 }
 
-#freedom_songs h2{
-	font-family: Verdana, helvetica, sans-serif;
-	text-align: center;
-	color: #cc2030;
-	text-transform: uppercase;
-	letter-spacing:4px;
+.video iframe {
+	float:  left;
+	border:  15px solid #ffffff;
+	-webkit-box-shadow:  0px 1px 1px #ccc;
+	-moz-box-shadow:  0px 1px 1px #ccc;
+	box-shadow: 0px 1px 1px #ccc;
+	/*width:  390px;*/
+	margin:  auto;
 }
+
+.video {
+	text-align: center;
+	width:  480px;
+	float:  left;
+	margin: 10px;
+}
+
+.video h1 {
+	font: bold 25px 'Bebas', Arial, sans-serif;
+	letter-spacing: 1px;
+	color: #4f2683;
+	text-transform: uppercase;
+	letter-spacing: 1px;	
+}
+
+.video h2 {
+	font:  20px 'Bebas', Arial, sans-serif;
+	letter-spacing: 1px;
+	letter-spacing: 1px;	
+}
+
+.video h3 {
+	font: 18px/27px 'ColaborateThinRegular', Arial, sans-serif;
+	line-height: 95%;
+}
+
+.video span {
+	font: 14px 'Bebas', Arial, sans-serif;
+	letter-spacing: 2px;
+	
+}
+
+.text {
+	margin-bottom:  10px;
+}
+
+
+
+
+
+
 
 /* Internet Explorer 7 Fixes */
 
