--- a/styles/main.css
+++ b/styles/main.css
@@ -494,7 +494,6 @@ footer p{
 
 .history-pics{
 	width: 970px;
-	;
 	margin: auto;
 }
 
@@ -544,59 +543,44 @@ top: 20px;
 
 /* VIDEOS */
 #video_container{
-	width:  1050px;
-	position:  relative;
-	left:  -50px;
+	width: 1000px;
+	margin: auto;
 }
 
-.video iframe {
-	float:  left;
-	border:  15px solid #ffffff;
-	-webkit-box-shadow:  0px 1px 1px #ccc;
-	-moz-box-shadow:  0px 1px 1px #ccc;
-	box-shadow: 0px 1px 1px #ccc;
-	/*width:  390px;*/
-	margin:  auto;
+.video{
+	display: inline-block;
+	margin: 20px;
 }
 
-.video {
+.video h1, .video h2, .video h3{
 	text-align: center;
-	width:  480px;
-	float:  left;
-	margin: 10px;
 }
 
-.video h1 {
-	font: bold 25px 'Bebas', Arial, sans-serif;
-	letter-spacing: 1px;
-	color: #4f2683;
+.video h1{
+	font-family: Verdana, helvetica, sans-serif;
+	color: #cc2030;
+	font-size: 18px;
 	text-transform: uppercase;
-	letter-spacing: 1px;	
 }
 
-.video h2 {
-	font:  20px 'Bebas', Arial, sans-serif;
-	letter-spacing: 1px;
-	letter-spacing: 1px;	
+.video h2{
+	font-family: Verdana, helvetica, sans-serif;
+	color: black;
+	font-size: 16px;
 }
 
-.video h3 {
-	font: 18px/27px 'ColaborateThinRegular', Arial, sans-serif;
-	line-height: 95%;
+.video h3{
+	font-family: Courier;
+	font-size: 13px;
 }
 
-.video span {
-	font: 14px 'Bebas', Arial, sans-serif;
-	letter-spacing: 2px;
-	
+iframe{
+	margin-top: 10px;
 }
 
-.text {
-	margin-bottom:  10px;
+#more a{
+	color: black;
 }
-
-
-
 
 
 
