--- a/styles/main.css
+++ b/styles/main.css
@@ -597,7 +597,85 @@ iframe{
 	font-style: italic;
 }
 
+/* MUSIC */
 
+.songs {
+border: 1px #616363 solid;
+color: #616363;
+margin: auto;
+margin-top: 20px;
+margin-bottom: 20px;
+font: normal 13px 'Courier';
+position: relative;
+padding: 10px;
+width: 50%;
+clear: both;
+top: 20px;
+}
+
+.songs p{
+	text-align: center;
+	margin-top: 7px;
+}
+
+.albums{
+	width: 720px;
+	height: 200px;
+	position: relative;
+	margin: auto;
+	margin-top: 20px;
+	top: 50px;
+}
+
+.albums li{
+	display: inline-block;
+}
+
+.albums img{
+	height: 100px;
+	position: relative;
+}
+
+.fancyalbums{
+	height: 300px;
+}
+
+.fancyalbums img{
+	position: relative;
+	top: 30px;
+}
+
+.fancyalbums h1 {
+	font-family: Verdana, Arial, Sans-serif;
+	color: #cc2030;
+}
+
+fancyalbums h2 {
+	font-family: Verdana, Arial, Sans-serif;
+	color: black;
+}
+
+.fancyalbums ul{
+	font-family: Courier;
+	font-size: 13px;
+	position: relative;
+	top: 10px;
+}
+
+/*CONTACT US*/
+.contact {
+border: 1px #616363 solid;
+color: #616363;
+margin: auto;
+margin-top: 20px;
+margin-bottom: 20px;
+font: normal 13px 'Courier';
+position: relative;
+padding: 10px;
+width: 50%;
+clear: both;
+top: 20px;
+}
 
 
 /* Internet Explorer 7 Fixes */
