--- a/styles/main.css
+++ b/styles/main.css
@@ -110,7 +110,7 @@ header .logo{
 }
 
 #primary ul{
-	width: 810px;
+	width: 800px;
 	margin: auto;
 }
 
@@ -128,6 +128,10 @@ header .logo{
 	-o-transition: all .3s ease-in-out;
 	transition: all .3 ease-in-out;
 	margin: 15px;
+}
+
+#first{
+	padding-left: 0;
 }
 
 #primary li a:hover {
