--- a/styles/main.css
+++ b/styles/main.css
@@ -778,9 +778,5 @@ html.ie7 {
 		
 
 /* Firefox fixes */		
-@-moz-document url-prefix() { 
-  .upcoming {
-     top: -10px;
-  }
-}
+html>/**/body .upcoming { top: 0; }
 		
