--- a/styles/main.css
+++ b/styles/main.css
@@ -778,5 +778,9 @@ html.ie7 {
 		
 
 /* Firefox fixes */		
-html>/**/body #upcoming { top: 10px; }
+@-moz-document url-prefix() { 
+  #upcoming {
+     top: 10px;
+  }
+}
 		
